Actualizada referencia a contenedor y título de página

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,18 +4,18 @@ body {
 	background-color: #000000;
 	display: table;
 }
-#asteroides, body, html {
+#space, body, html {
 	height: 100%;
 	width: 100%;
 }
-#asteroides { 
+#space { 
 	text-align: center;
 	vertical-align: middle;
 	width: 100%;
 	height: 100%;
 	display: table-cell;
 }
-#asteroides canvas {  
+#space canvas {  
 	margin: 0px auto;
 	border: 2px solid white;
 	width: 1000px;
